# bookmarkdown

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  poetry.toml  pyproject.toml  pyrightconfig.json  setup.py
bookmarkdown/: btm.py
tests/: test_btm.py
tests/files/: bookmarks-1.html  bookmarks-1.md
