[tool.poetry]
name = "bookmarkdown"
description = "Parse your browser's exported HTML bookmark file to Markdown."
readme = "README.md"
license = "MIT"
version = "0.1.1"
authors = ["Yannick Perrenet <yannickperrenet+bookmarkdown@gmail.com>"]
homepage = "https://github.com/yannickperrenet/bookmarkdown"
keywords = ["bookmarks", "markdown", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "^6.2.4"

[tool.poetry.scripts]
btm = "bookmarkdown.btm:main"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | venv
  | build
  | node_modules
)/
'''

# Be compliant with PEP-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
